# neptun.ai.scraper

./: .env.example  .gitignore  README.md  check.api.key.py  combine_jsonl.py  credits-left.py  example.py  main.py  pyproject.toml  requirements.txt  scrape-generic-docs.ps1  scrape.dockerhub.docs.py  scrape.generic.docs.py  scrape.github.actions.docs.py  scrape.github.docs.py  scrape.github.packages.docs.py  scrape.npm.py  stats.json  to-training-data-only.py
batch01/: argo_cd_docs.jsonl  coolify_docs.jsonl  deno_docs.jsonl  mdn_web_docs.jsonl
batch02/: astro-case-studies.jsonl  biomejs-guides.jsonl  biomejs-internals.jsonl  biomejs-recipes.jsonl  biomejs-reference.jsonl  echo.jsonl  elysiajs.jsonl  hono.jsonl  nektosact.jsonl  nitro-config.jsonl  nitro-deploy.jsonl  nuxt-deploy.jsonl  podman.jsonl  postcss.jsonl  skaffold.jsonl  svelte-core.jsonl  tailwindcss-v3.jsonl  vite-config.jsonl  vite-guide.jsonl  vite-v5-config.jsonl  vue-about.jsonl  vue-api.jsonl  vue-guide.jsonl
data/: asdf-vm.jsonl  astro.jsonl  aws_docs.jsonl  better-auth.jsonl  biomejs-analyzer.jsonl  biomejs-formatter.jsonl  caddy.jsonl  flask-stable.jsonl  frankenphp.jsonl  github_packages_docs.jsonl  gitlab_docs.jsonl  google_style_guide_docs.jsonl  harbor-2-12-0.jsonl  helm_docs.jsonl  ktor.jsonl  kubevela_docs.jsonl  laravel-livewire.jsonl  nitro-guide.jsonl  nuxt-blog.jsonl  nuxt.jsonl  postal.jsonl  python_packaging_docs.jsonl  radix-ui-primitives.jsonl  radix-ui-themes.jsonl  react-learn.jsonl  react-reference.jsonl  sass.jsonl  scrapy-latest.jsonl  shadcn-svelte.jsonl  shadcn-ui.jsonl  (+7 more)
(+378 files in other folders)
